--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
-Phishing:
-https://openphish.com/feed.txt
-https://www.phishtank.com/
-https://phishstats.info/
+<!DOCTYPE html>
+<head>
+
+</head>
+<body>
+<h1> Phishing: </h1>
+<ol> openphish.com/feed.txt </ol>
+<ol> www.phishtank.com </ol>
+<ol> phishstats.info </ol>
 
 IOC Tools:
 https://github.com/sroberts/jager
@@ -32,3 +37,4 @@ https://any.run/
 
 Research:
 https://github.com/aptnotes/data
+</body>
