--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 </head>
 <body>
-<ol> openphish.com/feed.txt </ol>
-<ol> www.phishtank.com </ol>
-<ol> phishstats.info </ol>
+<h2> Phishing: </h2>
+<ul> www.openphish.com</ul>
+<ul> www.phishtank.com </ul>
+<ul> phishstats.info </ul>
 
 IOC Tools:
 https://github.com/sroberts/jager
