--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
 
     <h3> Research:</h3>
         <ul>
-            <li><a href="https://github.com/aptnotes/data">data</a></li>
+            <li><a href="https://github.com/aptnotes/data/blob/master/APTnotes.csv">reports</a></li>
         </ul>
 </body>
