--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <h1> Threat Intelligence Framework </h1>
     <h3> Phishing: </h3>
         <ul>
-            <li><a href="www.openphish.com">openphish</a></li>
+            <li><a href="https://www.openphish.com">openphish</a></li>
         </ul>
         <ul>
-            <li><a href="www.phishtank.com">phishtank</a></li>
+            <li><a href="https://www.phishtank.com">phishtank</a></li>
         </ul>
         <ul>
-            <li><a href="www.phishstats.info">phishstats</a></li>
+            <li><a href="https://www.phishstats.info">phishstats</a></li>
         </ul>
     
     <h3> TTPs:</h3>
