--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 </head>
 <body>
-    <h1> Threat Intelligence Framework </h1>
+    <h1> Threat Intelligence Tools </h1>
     <h3> Phishing: </h3>
         <ul>
             <li><a href="https://www.openphish.com">openphish</a></li>
